# uwufy

./: Cargo.toml
linux/: .cocciconfig  COPYING  CREDITS  Kbuild  Kconfig  MAINTAINERS  Makefile  README
linux/Documentation/: CodingStyle  Kconfig  Makefile  SubmittingPatches  atomic_bitops.txt  atomic_t.txt  conf.py  docutils.conf  dontdiff  index.rst  memory-barriers.txt  subsystem-apis.rst
linux/arch/: Kconfig
linux/block/: Kconfig  Kconfig.iosched  Makefile  badblocks.c  bdev.c  bfq-cgroup.c  bfq-iosched.c  bfq-iosched.h  bfq-wf2q.c  bio-integrity.c  bio.c  blk-cgroup-fc-appid.c  blk-cgroup-rwstat.c  blk-cgroup-rwstat.h  blk-cgroup.c  blk-cgroup.h  blk-core.c  blk-crypto-fallback.c  blk-crypto-internal.h  blk-crypto-profile.c  blk-crypto-sysfs.c  blk-crypto.c  blk-flush.c  blk-ia-ranges.c  blk-integrity.c  blk-ioc.c  blk-iocost.c  blk-iolatency.c  blk-ioprio.c  blk-ioprio.h  blk-lib.c  blk-map.c  blk-merge.c  blk-mq-cpumap.c  blk-mq-debugfs-zoned.c  blk-mq-debugfs.c  blk-mq-debugfs.h  blk-mq-pci.c  blk-mq-sched.c  blk-mq-sched.h  (+37 more)
linux/certs/: Kconfig  Makefile  blacklist.c  blacklist.h  blacklist_hashes.c  check-blacklist-hashes.awk  default_x509.genkey  extract-cert.c  system_keyring.c
linux/crypto/: 842.c  Kconfig  Makefile  acompress.c  adiantum.c  aead.c  aegis-neon.h  aegis.h  aegis128-core.c  aegis128-neon-inner.c  aegis128-neon.c  aes_generic.c  aes_ti.c  af_alg.c  ahash.c  akcipher.c  algapi.c  algboss.c  algif_aead.c  algif_hash.c  algif_rng.c  algif_skcipher.c  ansi_cprng.c  anubis.c  api.c  arc4.c  aria_generic.c  authenc.c  authencesn.c  blake2b_generic.c  blowfish_common.c  blowfish_generic.c  camellia_generic.c  cast5_generic.c  cast6_generic.c  cast_common.c  cbc.c  ccm.c  chacha20poly1305.c  chacha_generic.c  (+112 more)
linux/drivers/: Kconfig  Makefile
linux/fs/: Kconfig  Kconfig.binfmt  Makefile  aio.c  anon_inodes.c  attr.c  backing-file.c  bad_inode.c  binfmt_elf.c  binfmt_elf_fdpic.c  binfmt_elf_test.c  binfmt_flat.c  binfmt_misc.c  binfmt_script.c  buffer.c  char_dev.c  compat_binfmt_elf.c  coredump.c  d_path.c  dax.c  dcache.c  direct-io.c  drop_caches.c  eventfd.c  eventpoll.c  exec.c  fcntl.c  fhandle.c  file.c  file_table.c  filesystems.c  fs-writeback.c  fs_context.c  fs_parser.c  fs_pin.c  fs_struct.c  fs_types.c  fsopen.c  init.c  inode.c  (+35 more)
linux/init/: Kconfig  Makefile  build-version  calibrate.c  do_mounts.c  do_mounts.h  do_mounts_initrd.c  do_mounts_rd.c  init_task.c  initramfs.c  main.c  noinitramfs.c  version-timestamp.c  version.c
linux/io_uring/: Makefile  advise.c  advise.h  alloc_cache.h  cancel.c  cancel.h  epoll.c  epoll.h  fdinfo.c  fdinfo.h  filetable.c  filetable.h  fs.c  fs.h  futex.c  futex.h  io-wq.c  io-wq.h  io_uring.c  io_uring.h  kbuf.c  kbuf.h  msg_ring.c  msg_ring.h  net.c  net.h  nop.c  nop.h  notif.c  notif.h  opdef.c  opdef.h  openclose.c  openclose.h  poll.c  poll.h  refs.h  register.c  register.h  rsrc.c  (+22 more)
linux/ipc/: Makefile  compat.c  ipc_sysctl.c  mq_sysctl.c  mqueue.c  msg.c  msgutil.c  namespace.c  sem.c  shm.c  syscall.c  util.c  util.h
linux/kernel/: Kconfig.freezer  Kconfig.hz  Kconfig.kexec  Kconfig.locks  Kconfig.preempt  Makefile  acct.c  async.c  audit.c  audit.h  audit_fsnotify.c  audit_tree.c  audit_watch.c  auditfilter.c  auditsc.c  backtracetest.c  bounds.c  capability.c  cfi.c  compat.c  configs.c  context_tracking.c  cpu.c  cpu_pm.c  crash_core.c  crash_dump.c  cred.c  delayacct.c  dma.c  exec_domain.c  exit.c  exit.h  extable.c  fail_function.c  fork.c  freezer.c  gen_kheaders.sh  groups.c  hung_task.c  iomem.c  (+78 more)
linux/lib/: Kconfig  Kconfig.debug  Kconfig.kasan  Kconfig.kcsan  Kconfig.kfence  Kconfig.kgdb  Kconfig.kmsan  Kconfig.ubsan  Makefile  argv_split.c  ashldi3.c  ashrdi3.c  asn1_decoder.c  asn1_encoder.c  assoc_array.c  (+260 more)
linux/tools/usb/usbip/: AUTHORS  COPYING  INSTALL  Makefile.am  README  autogen.sh  cleanup.sh  configure.ac
linux/tools/usb/usbip/doc/: usbip.8  usbipd.8
linux/tools/usb/usbip/libsrc/: Makefile.am  list.h  names.c  names.h  sysfs_utils.c  sysfs_utils.h  usbip_common.c  usbip_common.h  usbip_device_driver.c  usbip_device_driver.h  usbip_host_common.c  usbip_host_common.h  usbip_host_driver.c  usbip_host_driver.h  vhci_driver.c  vhci_driver.h
linux/tools/usb/usbip/src/: Makefile.am  usbip.c  usbip.h  usbip_attach.c  usbip_bind.c  usbip_detach.c  usbip_list.c  usbip_network.c  usbip_network.h  usbip_port.c  usbip_unbind.c  usbipd.c  utils.c  utils.h
linux/tools/usb/usbip/vudc/: vudc_server_example.sh
src/: main.rs
(+79529 files in other folders)
