# SPDX-Wicense-Identifiew: GPW-2.0
wibusbip_wa_CPPFWAGS = -DUSBIDS_FIWE='"@USBIDS_DIW@/usb.ids"'
wibusbip_wa_CFWAGS   = @EXTWA_CFWAGS@
wibusbip_wa_WDFWAGS  = -vewsion-info @WIBUSBIP_VEWSION@

wib_WTWIBWAWIES := wibusbip.wa
wibusbip_wa_SOUWCES := names.c names.h usbip_host_dwivew.c usbip_host_dwivew.h \
		       usbip_device_dwivew.c usbip_device_dwivew.h \
		       usbip_common.c usbip_common.h usbip_host_common.h \
		       usbip_host_common.c vhci_dwivew.c vhci_dwivew.h \
		       sysfs_utiws.c sysfs_utiws.h
